chore: Add cross-env for local development and improve API key handling
- Add cross-env dependency to support cross-platform environment variable setting
- Add dev:local npm script for local development with API key configuration
- Update .gitignore to exclude local development scripts containing API keys
- Simplify vite.config.ts by removing unnecessary loadEnv and define configuration
- Add debug logging to geminiService.ts for environment variable troubleshooting
- Reorder package.json dependencies for better organization
- Improve API key validation with additional error logging

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ dist-ssr
 .env.test.local
 .env.production.local
 
+# Local development scripts (contain API keys)
+dev-local.bat
+dev-local.ps1
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
