feat(firebase): Add Firebase integration with Firestore database and emulator setup
- Add Firebase configuration files (.firebaserc, firebase.json, firestore.rules, firestore.indexes.json)
- Initialize Firebase app and Firestore database connection in firebase.js
- Add database seeding script (seed-database.js) for populating initial data
- Add emulator startup scripts for Windows (start-emulator.bat, start-emulator.ps1)
- Convert all database operations to async/await in api/chat.ts for proper Firestore integration
- Update AdminDashboard component with async data loading and error handling
- Update ChatInterface component with async message and profile loading
- Refactor geminiService.ts to work with async database operations
- Add loading states and error handling throughout components
- Update package.json dependencies to include Firebase SDK
- Enable real-time data synchronization with Firestore backend instead of in-memory storage

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "dev:local": "cross-env VITE_GEMINI_API_KEY=your_api_key_here vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "emulator": "firebase emulators:start",
+    "emulator:seed": "firebase emulators:start --import=./emulator-data --export-on-exit=./emulator-data"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "firebase": "^12.7.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0"
