--- a/firebase.json
+++ b/firebase.json
@@ -5,13 +5,30 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
   "emulators": {
     "firestore": {
-      "port": 8081
+      "port": 8082
+    },
+    "hosting": {
+      "port": 5001
     },
     "ui": {
       "enabled": true,
-      "port": 4001
+      "port": 4002
     },
     "singleProjectMode": true
   }
