--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev:local": "cross-env VITE_GEMINI_API_KEY=your_api_key_here vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "npm run build && firebase deploy",
+    "deploy:hosting": "npm run build && firebase deploy --only hosting",
     "emulator": "firebase emulators:start",
     "emulator:seed": "firebase emulators:start --import=./emulator-data --export-on-exit=./emulator-data"
   },
