feat(landing-page): Add landing page with waitlist signup and leads API
- Add LandingPage component with email/postcode collection form
- Create leads API endpoint (/api/leads) with validation and sanitization
- Add ContextTestPanel and ContextManager for context analytics
- Implement leads database integration with Firebase Firestore
- Add contextConfig for managing application context settings
- Update App.tsx routing to separate landing page from admin routes
- Add AdminDashboard enhancements for leads management
- Create DEPLOYMENT_INSTRUCTIONS.md with setup and usage guide
- Add network visualization image to public assets
- Update package.json with new dependencies and scripts
- Add server.js for API endpoint handling
- Update tsconfig.json and types.ts for new components
- Update Firebase hosting cache with new assets
- Implement input validation, duplicate prevention, and error handling for form submissions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,11 @@
   },
   "include": [
     "src/**/*",
+    "components/**/*",
+    "services/**/*",
+    "utils/**/*",
+    "config/**/*",
+    "api/**/*",
     "*.ts",
     "*.tsx"
   ],
