--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev:local": "cross-env VITE_GEMINI_API_KEY=your_api_key_here vite",
+    "dev:server": "node server.js",
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "npm run build && firebase deploy",
@@ -18,7 +19,9 @@
     "firebase": "^12.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
