--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 GEMINI_API_KEY=your_actual_api_key_here
 VITE_GEMINI_API_KEY=your_actual_api_key_here
+
+# Resend Email Service
+RESEND_API_KEY=your_resend_api_key_here
