--- a/firebase.json
+++ b/firebase.json
@@ -21,15 +21,35 @@
   },
   "emulators": {
     "firestore": {
-      "port": 8082
+      "port": 8083
+    },
+    "functions": {
+      "port": 5003
     },
     "hosting": {
-      "port": 5001
+      "port": 5004
     },
     "ui": {
       "enabled": true,
-      "port": 4002
+      "port": 4004
     },
     "singleProjectMode": true
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "disallowLegacyRuntimeConfig": true,
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ]
 }
