--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^12.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "resend": "^6.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
