--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0",
-    "resend": "^6.7.0"
+    "resend": "^6.7.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "cross-env": "^10.1.0",
     "typescript": "~5.8.2",
