perf(chat-interface): Optimize message handling with optimistic updates and background saves
- Add optimistic UI updates for user and agent messages to reduce perceived latency
- Implement background database saves that don't block UI rendering
- Use cached profile data instead of fetching on every message send
- Reuse current message history instead of refetching from database
- Add detailed performance logging with timestamps to track optimization impact
- Switch primary AI model from gemini-3-pro-preview to gemini-2.5-flash for faster responses
- Add Firebase hosting deployment scripts for staging and live environments
- Update Firebase cache manifest with new build artifacts
- Reduce total message send-to-response time by eliminating sequential database calls

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview",
     "deploy": "npm run build && firebase deploy",
     "deploy:hosting": "npm run build && firebase deploy --only hosting",
+    "deploy:preview": "npm run build && firebase hosting:channel:deploy staging",
+    "deploy:live": "firebase hosting:clone dad-circles:staging dad-circles:live",
     "emulator": "firebase emulators:start",
     "emulator:seed": "firebase emulators:start --import=./emulator-data --export-on-exit=./emulator-data"
   },
