feat(matching): Implement complete matching algorithm and group formation system
- Add matching algorithm with geographic filtering and life stage bucketing
- Implement group formation with 4-6 member size validation and age proximity sorting
- Create MatchingService with robust constraint validation and quality thresholds
- Add test data infrastructure with 50 realistic users across 4 cities
- Implement seed and cleanup scripts for test user management
- Add admin dashboard matching tab with real-time statistics and controls
- Create API endpoints for matching operations and statistics retrieval
- Implement group introduction email system with HTML templates
- Add cloud functions for daily scheduled matching and email processing
- Update database schema with group collection and matching-related fields
- Add comprehensive logging utilities for monitoring and debugging
- Update .gitignore to exclude Firebase logs and temporary development files
- Create implementation summary documentation with architecture overview
- Remove legacy seed-database.js and mobile-test.html files
- Update package.json and dependencies for matching system requirements

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Firebase logs
+firebase-debug.log
+firestore-debug.log
+
 node_modules
 dist
 dist-ssr
@@ -22,6 +26,12 @@ dist-ssr
 # Local development scripts (contain API keys)
 dev-local.bat
 dev-local.ps1
+
+# Temporary development files
+check-database.js
+reset-database.js
+seed-database.js
+mobile-test.html
 
 # Editor directories and files
 .vscode/*
